--- a/style/style.css
+++ b/style/style.css
@@ -61,6 +61,47 @@ div #digits {
   font-size: 80px;
   color: white;
 }
+#message {
+  color: whitesmoke;
+}
+/*select*/
+#menu {
+  height: 60px;
+  margin: auto;
+  text-align: center;
+}
+
+#menu ul {
+  display: inline-block;
+  padding: 0em 2em;
+  text-align: center;
+}
+
+#menu li {
+  display: inline-block;
+}
+
+#menu li a,
+#menu li span {
+  display: inline-block;
+  padding: 0em 1.5em;
+  text-decoration: none;
+  font-size: 0.9em;
+  font-weight: 600;
+  text-transform: uppercase;
+  line-height: 60px;
+  outline: 0;
+  color: #fff;
+}
+
+#menu li:hover a,
+#menu li.active a,
+#menu li.active span {
+  background: #fff;
+  border-radius: 7px 7px 0px 0px;
+  color: #3b3b3b;
+}
+
 /*footer*/
 footer {
   background-color: #3b3b3b;
