added morning image for theme
added sound for warning

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Questrial", sans-serif;
   background: url("../images/dark_tree-01.jpg");
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -13,12 +14,13 @@ h2 #header-h1 {
 #header-h1 {
   color: #fff;
 }
-#header-container {
+/* #header-container {
   background: #3b3b3b;
-}
+} */
 
 #header {
   text-align: center;
+  border-bottom: 20px solid rgba(255, 255, 255, 0.08);
 }
 
 .container {
@@ -63,6 +65,7 @@ div #digits {
 }
 #message {
   color: whitesmoke;
+  font-size: 20px;
 }
 /*select*/
 #menu {
@@ -75,6 +78,7 @@ div #digits {
   display: inline-block;
   padding: 0em 2em;
   text-align: center;
+  font-size: 16px;
 }
 
 #menu li {
@@ -103,9 +107,9 @@ div #digits {
 }
 
 /*footer*/
-footer {
+/* .footer {
   background-color: #3b3b3b;
-}
+} */
 #copyright {
   overflow: hidden;
   padding: 2em 0em;
@@ -153,4 +157,10 @@ ul.contact li a:before {
   line-height: 40px;
   text-align: center;
   color: rgba(255, 255, 255, 1);
+}
+
+.light-header-footer {
+  background-image: url(../images/morning.jpg);
+  background-size: cover;
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
